--- a/Player.html
+++ b/Player.html
@@ -3,102 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Page</title>
+    <title>Copy Code Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #f5f5f5;
         }
-
         .container {
-            max-width: 600px;
-            width: 90%;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
-            background-color: #f0f0f0;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        h1 {
+        .header {
             text-align: center;
-            color: #333;
+            margin-bottom: 20px;
         }
-
-        .code-box {
-            position: relative;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 20px;
-            margin-top: 20px;
+        .code-container {
             text-align: center;
+            margin-bottom: 20px;
         }
-
         .code {
             font-size: 36px;
             font-weight: bold;
-            color: #333;
-            margin: 0;
+            margin-bottom: 10px;
         }
-
-        .btn {
+        .copy-btn {
+            background-color: #4CAF50;
+            color: white;
             padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
         }
-
-        .copy-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+        .copy-btn:hover {
+            background-color: #45a049;
         }
-
-        .download-btn {
-            margin-top: 20px;
+        .btn-container {
             text-align: center;
+            margin-bottom: 20px;
         }
-
-        @media only screen and (max-width: 600px) {
-            .container {
-                width: 100%;
-            }
+        .home-btn {
+            background-color: #008CBA;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .home-btn:hover {
+            background-color: #0077a3;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>waad ku guu leysaty inaad gadato adeegaan fadlan dagso code ka</h1>
-        <div class="code-box">
-            <div class="code" id="code">
-                5566
-                <button class="btn copy-btn" onclick="copyCode()">Copy</button>
-            </div>
+        <div class="header">
+            <h2>waa kan code kaaga fadlan screenshot kaqaato</h2>
         </div>
-        <div class="download-btn">
-            <a class="btn" href="https://i.postimg.cc/WzzJPZBn/HOUR.png " download>Download Image</a>
+        <div class="code-container">
+            <div class="code" id="code">5566</div>
+            <button class="copy-btn" onclick="copyCode()">Copy</button>
+        </div>
+        <div class="btn-container">
+            <a class="home-btn" href="https://sodkk.github.io/Last/Iphone.html">Back to Home</a>
         </div>
     </div>
 
     <script>
         function copyCode() {
-            var codeElement = document.getElementById("code");
+            var codeText = document.getElementById("code");
             var range = document.createRange();
-            range.selectNode(codeElement);
+            range.selectNode(codeText);
             window.getSelection().removeAllRanges();
             window.getSelection().addRange(range);
             document.execCommand("copy");
             window.getSelection().removeAllRanges();
-            alert("Code copied!");
+            alert("Code copied: " + codeText.innerText);
         }
     </script>
 </body>
