--- a/Player.html
+++ b/Player.html
@@ -3,85 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copy Code Page</title>
+    <title>Warning Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
+
+        .warning-box {
+            background-color: #fff;
             padding: 20px;
-        }
-        .header {
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+        }
+
+        .warning-text {
+            font-size: 24px;
+            color: #ff0000;
             margin-bottom: 20px;
         }
-        .code-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .code {
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .copy-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .copy-btn:hover {
-            background-color: #45a049;
-        }
-        .btn-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .home-btn {
-            background-color: #008CBA;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .home-btn:hover {
-            background-color: #0077a3;
+
+        @media (max-width: 600px) {
+            .warning-box {
+                width: 80%;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h2>waa kan code kaaga fadlan screenshot kaqaato</h2>
+    <div class="warning-box">
+        <div class="warning-text">
+            Ciyaartan Lama Gaarin Fadlan Markale Soo Laabo
         </div>
-        <div class="code-container">
-            <div class="code" id="code">5566</div>
-            <button class="copy-btn" onclick="copyCode()">Copy</button>
-        </div>
-        <div class="btn-container">
-            <a class="home-btn" href="https://sodkk.github.io/Last/Iphone.html">Back to Home</a>
+        <div>
+            Time to Pass: 22:00<br>
+            Channels: All<br>
+            Device: iPhone
         </div>
     </div>
-
-    <script>
-        function copyCode() {
-            var codeText = document.getElementById("code");
-            var range = document.createRange();
-            range.selectNode(codeText);
-            window.getSelection().removeAllRanges();
-            window.getSelection().addRange(range);
-            document.execCommand("copy");
-            window.getSelection().removeAllRanges();
-            alert("Code copied: " + codeText.innerText);
-        }
-    </script>
 </body>
 </html>
