--- a/Good.html
+++ b/Good.html
@@ -219,7 +219,7 @@ setInterval(refreshPage, 10000);
 
     <!--match mdw1-->
   <div class="mnajiri">
-   <a class="fullink" href="https://sodkk.github.io/Last/time.html"></a>
+   <a class="fullink" href="https://mhdplay.com/tv/uefa-champions-league/"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
@@ -250,7 +250,7 @@ setInterval(refreshPage, 10000);
 
 <!--match mdw2-->
   <div class="mnajiri">
-   <a class="fullink" href="https://sodkk.github.io/Last/time.html"></a>
+   <a class="fullink" href="https://mhdplay.com/tv/uefa-champions-league/"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
