--- a/time.html
+++ b/time.html
@@ -32,7 +32,7 @@
   // Function to redirect users based on device
   function redirectToLink() {
     if (isiPhone()) {
-      window.location.href = "https://soodag.42web.io/?i=1";
+      window.location.href = "https://qaabiyesport.blogspot.com/";
     } else {
       document.getElementById("redirectContainer").innerHTML = '<p class="error-message">Sorry, this page is only accessible on iPhone devices.</p>';
     }
