--- a/Good.html
+++ b/Good.html
@@ -268,7 +268,7 @@
   
   <!--match mdw3-->
     <div class="mnajiri">
-     <a class="fullink" href="go:_ads"></a>
+     <a class="fullink" href="go:_2b"></a>
          <div class="mnajiriin">
            <div class="mpart1">
              <div class="right_match">
@@ -299,7 +299,7 @@
   
   <!--match mdw4-->
     <div class="mnajiri">
-     <a class="fullink" href="go:_ads"></a>
+     <a class="fullink" href="go:_2b"></a>
          <div class="mnajiriin">
            <div class="mpart1">
              <div class="right_match">
