--- a/Good.html
+++ b/Good.html
@@ -206,7 +206,7 @@
   <div class="match_today container" id="match_today">
     <!--match mdw1-->
   <div class="mnajiri">
-   <a class="fullink" href="go:_ads"></a>
+   <a class="fullink" href="go:_1b"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
@@ -237,7 +237,7 @@
 
 <!--match mdw2-->
   <div class="mnajiri">
-   <a class="fullink" href="go:_ads"></a>
+   <a class="fullink" href="go:_2b"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
